<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_reais_detalhes"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tamanho_textos"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/reais"
        android:textSize="@dimen/tamanho_fonte_maior"
        app:layout_constraintEnd_toStartOf="@+id/valor_produto_atras"
        app:layout_constraintTop_toTopOf="@+id/nome_produto_edicao" />

    <ImageView
        android:id="@+id/imagem_produto_edicao"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/imagem_do_produto"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/nome_produto_edicao"
        android:layout_width="0dp"
        android:layout_height="@dimen/tamanho_textos"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:hint="@string/nome_do_produto"
        android:inputType="text"
        android:textColorHint="#757575"
        android:textSize="@dimen/tamanho_fonte_menor"
        app:layout_constraintBottom_toBottomOf="@+id/imagem_produto_edicao"
        app:layout_constraintEnd_toStartOf="@+id/txt_reais_detalhes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imagem_produto_edicao"
        app:layout_constraintTop_toTopOf="@+id/imagem_produto_edicao" />

    <EditText
        android:id="@+id/marca_produto_edicao"
        android:layout_width="0dp"
        android:layout_height="@dimen/tamanho_textos"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:hint="@string/marca"
        android:inputType="text"
        android:textColorHint="#757575"
        android:textSize="@dimen/tamanho_fonte_menor"
        app:layout_constraintEnd_toStartOf="@+id/quantidade_produto_edicao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <EditText
        android:id="@+id/medida_produto_edicao"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tamanho_textos"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:gravity="center|end"
        android:hint="@string/volume_peso"
        android:inputType="text"
        android:textColorHint="#757575"
        android:textSize="@dimen/tamanho_fonte_menor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complemento_produto_edicao" />

    <EditText
        android:id="@+id/complemento_produto_edicao"
        android:layout_width="0dp"
        android:layout_height="@dimen/tamanho_textos"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:hint="@string/complemento"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="@dimen/tamanho_fonte_menor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marca_produto_edicao" />

    <TextView
        android:id="@+id/txt_tipo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tamanho_textos"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tipo"
        android:textSize="@dimen/tamanho_fonte_menor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complemento_produto_edicao" />

    <Spinner
        android:id="@+id/tipo_produto_edicao"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tamanho_textos"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/tipo_da_produto"
        app:layout_constraintStart_toEndOf="@+id/txt_tipo"
        app:layout_constraintTop_toTopOf="@+id/txt_tipo"
        tools:text="cosmetico" />

    <EditText
        android:id="@+id/quantidade_produto_edicao"
        android:layout_width="110sp"
        android:layout_height="@dimen/tamanho_textos"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/quantidade_produto"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="@dimen/tamanho_fonte_menor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/marca_produto_edicao" />

    <EditText
        android:id="@+id/valor_produto_atras"
        android:layout_width="50sp"
        android:layout_height="@dimen/tamanho_textos"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/valor"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        android:textSize="@dimen/tamanho_fonte_menor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_reais_detalhes" />

    <View
        android:id="@+id/divider6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagem_produto_edicao" />

    <Button
        android:id="@+id/salvar_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/salvar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipo_produto_edicao" />

    <Button
        android:id="@+id/cancelar_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/cancelar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/salvar_produto" />

</androidx.constraintlayout.widget.ConstraintLayout>