<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vendas.adicionar.AdicionarVendaProduto">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar_add_venda_produto"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:titleTextColor="@color/white" />

  <TextView
      android:id="@+id/tv_produtos_selecionados"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:text="@string/produtos_selecionados"
      android:textSize="@dimen/tamanho_fonte_menor"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar_add_venda_produto" />

  <SearchView
      android:id="@+id/sv_venda_produto"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="20dp"
      android:iconifiedByDefault="false"
      android:queryHint="Pesquise o nome do produto"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_produto_add_venda"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="10dp"
      app:layout_constraintBottom_toTopOf="@+id/btn_cancelar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/sv_venda_produto"
      tools:listitem="@layout/linha_item_pedido" />

  <Button
      android:id="@+id/btn_cancelar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginBottom="10dp"
      android:text="@string/voltar"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/btn_salvar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="10dp"
      android:text="@string/salvar"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/btn_cancelar" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_itempedido_add_venda"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="5dp"
      android:layout_marginEnd="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_max="200dp"
      app:layout_constraintHeight_min="80dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_produtos_selecionados"
      tools:itemCount="3"
      tools:listitem="@layout/linha_item_pedido" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:text="@string/selecione_os_produtos"
      android:textSize="@dimen/tamanho_fonte_menor"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rv_itempedido_add_venda" />

</androidx.constraintlayout.widget.ConstraintLayout>